@@ -1,3 +1,10 @@
+2013-01-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/55686
+	* config/i386/i386.md (UNSPEC_STOS): New.
+	(strset_singleop, *strsetdi_rex_1, *strsetsi_1, *strsethi_1,
+	*strsetqi_1): Add UNSPEC_STOS.
+
 2012-12-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/55750
